ingress/ingress_https/ingress_alb-https.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usermgmt-https-ingress-alb
  annotations:
    # ExternalDNS
    external-dns.alpha.kubernetes.io/hostname: usermgmt.tinacloud.dev
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: usermgmt-alb-https
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /usermgmt/health-status   
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:162663626265:certificate/a4eb55e2-32e6-4241-8775-262a19640c13
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'        
spec:
  ingressClassName: alb

  rules:
    - host: usermgmt.tinacloud.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: usermgmt
                port:
                  number: 8095
